# cmake

./: .appveyor.yml  .travis.yml  AddQtTest.cmake  CMakeLists.txt  CommonConfig.cmake  Methods.cmake  Package.cmake  Translations.cmake  config.cmake.in  readme.md
manifest/: AddManifest.cmake
src/: AddQtTest.cmake  AddResourceInfo.cmake  CMakeLists.txt  CodeCoverage.cmake  CommonConfig.cmake  CompilerFlags.cmake  GetVersionFromGitTag.cmake  Methods.cmake  Package.cmake  Translations.cmake  resource.rc.in
tests/: CMakeLists.txt  runtests.cmake
tests/valgrind/: CMakeLists.txt  tst_leak.cpp  tst_noleak.cpp
